k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ticketing-app
  labels:
    app.kubernetes.io/name: ticketing-app
    app.kubernetes.io/part-of: ticketing-system
